Fixed Z-index of FAQ
- changed Z-index

--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -159,6 +159,7 @@ $landing-color-dark-bg: $color-hack-black-5;
     // padding-top: 40rem;
     padding-bottom: 16rem;
     max-width: 88rem;
+    height: 40rem;
     text-align: center;
     margin: auto;
   }
@@ -220,6 +221,7 @@ $landing-color-dark-bg: $color-hack-black-5;
     border-radius: 4px;
     margin-bottom: 3rem;
     position: relative;
+    z-index: 2;
 
     &:after {
       font-weight: 900;
